// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs item matches snapshot 1`] = `
<Item
  className=""
  style={Object {}}
>
  <li
    className="nhsuk-breadcrumb__item"
    style={Object {}}
  >
    <a
      className="nhsuk-breadcrumb__link"
    >
      Item
    </a>
  </li>
</Item>
`;

exports[`Breadcrumbs matches snapshot 1`] = `
<Breadcrumbs
  className=""
>
  <nav
    className="nhsuk-breadcrumb"
  >
    <div
      className="nhsuk-width-container"
    >
      <ol
        className="nhsuk-breadcrumb__list"
      >
        <Item
          className=""
          style={Object {}}
        >
          <li
            className="nhsuk-breadcrumb__item"
            style={Object {}}
          >
            <a
              className="nhsuk-breadcrumb__link"
            >
              Test
            </a>
          </li>
        </Item>
      </ol>
    </div>
  </nav>
</Breadcrumbs>
`;
